force-app/main/default/objects/GRV_BodyDesignMAWP__c/GRV_BodyDesignMAWP__c.object-meta.xml
<CustomObject>
    <label>GRV_BodyDesignMAWP</label>
    <nameField>
        <label>GRV_BodyDesignMAWP</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>GRV_BodyDesignMAWP</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>