force-app/main/default/objects/GRV_BodyDesignMAWP__c/fields/MAWPLL__c.field-meta.xml
<CustomField>
    <fullName>MAWPLL__c</fullName>
    <label>MAWPLL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>