force-app/main/default/objects/GRV_BodyDesignMAWP__c/fields/MAWPUL__c.field-meta.xml
<CustomField>
    <fullName>MAWPUL__c</fullName>
    <label>MAWPUL</label>
    <precision>18</precision>
    <scale>10</scale>
    <type>Number</type>
</CustomField>