force-app/main/default/objects/GRV_BodyDesignMAWP__c/fields/SZC__c.field-meta.xml
<CustomField>
    <fullName>SZC__c</fullName>
    <label>SZC</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>