force-app/main/default/objects/GRV_BodyDesignMAWP__c/fields/ValveSubModel__c.field-meta.xml
<CustomField>
    <fullName>ValveSubModel__c</fullName>
    <label>ValveSubModel</label>
    <length>255</length>
    <type>Text</type>
</CustomField>