force-app/main/default/objects/GRV_BodyDesignMAWP__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ValveSubModel__c</columns>
    <columns>SZC__c</columns>
    <columns>MAWPLL__c</columns>
    <columns>MAWPUL__c</columns>
    <columns>BodyDesign__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>